--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -23,8 +23,9 @@
         <div>
             {% if errMessage%}
             <div>
-                {{errMessage%}}
+                {{errMessage}}
             </div>
+            {% endif %}
             {% if message %}
             <div class="error">
                 {{ message }}
@@ -32,7 +33,8 @@
             {% endif %}
             {% for todo in todoList %}
             <div class="task">
-                {{todo.id}}. {{todo.task}}
+
+                <p>{{todo.id}}. {{todo.task}}</p>
                 {% if todo.complete %}
                 <p>Task complete</p>
                 <a href="/update/{{todo.id}}">Mark incomplete</a>
