Fixed bugs with messages not showing, added CSS

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <title>Todo App</title>
 </head>
 
@@ -21,14 +22,14 @@
 
         <hr />
         <div>
-            {% if errMessage%}
-            <div>
-                {{errMessage}}
+            {% if message %}
+            <div class="message">
+                {{ message }}
             </div>
             {% endif %}
-            {% if message %}
+            {% if error %}
             <div class="error">
-                {{ message }}
+                {{ error }}
             </div>
             {% endif %}
             {% for todo in todoList %}
